he añadido el logo

--- a/Stylesheet/main.css
+++ b/Stylesheet/main.css
@@ -1,6 +1,7 @@
 h1 {
      font-size:80px;
-     background-color:red;
+     background-color:#C0C0C0;
+     color:black;
      }
  body {background-color: #C0C0C0 ;}
 @font-face {
