--- a/Stylesheet/main.css
+++ b/Stylesheet/main.css
@@ -2,6 +2,7 @@ h1 {
      font-size:80px;
      background-color:#C0C0C0;
      color:black;
+     font-style: arial black; 
      }
  body {background-color: #C0C0C0 ;}
 @font-face {
