--- a/Stylesheet/main.css
+++ b/Stylesheet/main.css
@@ -4,7 +4,13 @@ h1 {
      color:black;
      font-style: arial black; 
      }
- body {background-color: #C0C0C0 ;}
+
+h2{  font-size:50px;
+     color:#C0C0C0;
+}
+
+body{background-color:black;}
+     
 @font-face {
      font-family: 'WebSymbolsRegular';
      src: url('http://html5css3demos.bplaced.net/css3-slider-v3/websymbols-regular-webfont.eot');
