Jordi ha añadido las imagenes y yo he modificado astonmartin.html

--- a/Stylesheet/astonmartin.css
+++ b/Stylesheet/astonmartin.css
@@ -1,3 +1,8 @@
+h1{background-color:#C0C0C0;
+color:yellow;
+font-style: Franklin Gothic Medium ;
+font-size:80px;}
+
 
  * { margin: 0px;
 padding: 0px; outline: 0;
