--- a/Stylesheet/astonmartin.css
+++ b/Stylesheet/astonmartin.css
@@ -1,47 +1,71 @@
-.click
-{
-    width: 50px;
-    padding: 5px 10px;
-    background: #952262;
-    color: #fff;
+body {
+  display: block;
+  background-image:url("imagenes/Azul-y-verde.jpg");
+background-size:100% 100%;
+}
+.span3:focus ~ .alert {
+  display: none;
+}
+.span2:focus ~ .alert {
+  display: block;
+}
+
+img{float:left}
+
+
+.menu {
+    width: 950px;
+    height: 50px;
+    float: right;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    margin-top: 80px;
+    border: 1px #FFF solid;
+}
+
+.menu #nav {
+    list-style: none;   
+}
+
+.menu #nav li {
+    display: inline-block;
+    padding: 0px 30px 0px 30px;
+}
+
+.menu #nav li a {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    color: #FFF;
     text-decoration: none;
 }
 
-
-#slideDiv
-{
-    height:0;
-    margin-top: 20px;
-    color: #fff;
-    position: relative;
-    -webkit-transition:height, 0.5s linear;
-    -moz-transition: height, 0.5s linear;
-    -ms-transition: height, 0.5s linear;
-    -o-transition: height, 0.5s linear;
-    transition: height, 0.5s linear;
-    
-}
-
-#slideDiv a
-{
-    position: absolute;
-    right: 0;
-    color: #fff;
+.menu #nav li a:hover {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    color: #FFF;
     text-decoration: none;
-    background-color:red;
+    color: #ca6666;
 }
 
-#slideDiv:target
-{
-    height: 100%;
-    background: green;
-    color: #fff;
-    -webkit-transition:height, 0.5s linear;
-    -moz-transition: height, 0.5s linear;
-    -ms-transition: height, 0.5s linear;
-    -o-transition: height, 0.5s linear;
-    transition: height, 0.5s linear;
-
+.menu #nav li a .hover {
+    display:none;
 }
-img{float:left;}
-img.hidden {display:none;}
+
+
+.menu li a:hover + .hover {
+    background-image:url(images/hover.png);
+    background-position:center;
+    width: 96px;
+    height: 33px;
+    color: #ca6666;
+    font-weight: bold;  
+    display: block;
+    margin-top: -20px;
+}
+
+.clear {
+    clear: both;
+}
