--- a/Stylesheet/main.css
+++ b/Stylesheet/main.css
@@ -8,7 +8,7 @@ h2{  font-size:50px;
      color:#C0C0C0;
 }
 
-body{background-image:url("imagenes/Azul-y-verde.jpg");
+body{background-image:url("imagenes/fondo.jpg");
 background-size:100% 100%;}
      
 @font-face {
@@ -24,12 +24,7 @@ background-size:100% 100%;}
      padding: 0;
  }
  
- body {
-     background-image: url(http://subtlepatterns.com/patterns/dark_wall.png);
-     background-repeat: repeat;
-     height: 500px;
-     padding: 1px;
- }
+
  
  h1 { color: black }
  
