--- a/Stylesheet/astonmartin.css
+++ b/Stylesheet/astonmartin.css
@@ -28,7 +28,7 @@ padding:20px;
 -webkit-transition: box-shadow .4s;
 }
 
-p.texto{
+a.texto{
     font-size: 1.2em;
     color:white;
     text-align:center;
@@ -48,4 +48,8 @@ div.contenedor:hover p.texto{
 
 div.contenedor:hover img.icon{
     -webkit-box-shadow:0px 0px 0px 0px rgba(255,255,255,.6);
+}
+
+#a, #b, #c{
+	display:none;
 }
