Texto con marco

--- a/Stylesheet/astonmartin.css
+++ b/Stylesheet/astonmartin.css
@@ -28,7 +28,7 @@ padding:20px;
 -webkit-transition: box-shadow .4s;
 }
 
-a.texto{
+p.texto{
     font-size: 1.2em;
     color:white;
     text-align:center;
@@ -50,6 +50,10 @@ div.contenedor:hover img.icon{
     -webkit-box-shadow:0px 0px 0px 0px rgba(255,255,255,.6);
 }
 
-#a, #b, #c{
-	display:none;
+div.marco{
+    border:5px solid red;
+    padding:10px;
+    text-align:center;
+    padding-top:40px;
+    ;
 }
