--- a/Stylesheet/astonmartin.css
+++ b/Stylesheet/astonmartin.css
@@ -30,7 +30,7 @@ padding:20px;
 -webkit-transition: box-shadow .4s;
 }
 
-a.texto{
+p.texto{
     font-size: 1.2em;
     color:white;
     text-align:center;
@@ -60,6 +60,7 @@ div.marco{
     padding-top:40px;
     margin:200px auto;
     background-color:orange;
+    font: bold 20px arial; 
     
   
 }
@@ -108,3 +109,42 @@ table.ruben:hover{
     opacity:1;
 }
 
+table.ruben3 { border: red 5px solid;
+background-color:black;
+color:white;
+-webkit-transition: width  1s;
+-webkit-transition: height  1s;
+width:0px;
+height:0px;
+opacity:.2;
+}
+
+table.ruben3:hover{
+    width:1400px;
+    height:700px;
+    opacity:1;
+}
+table.rubencorto { border: red 5px solid;
+background-color:black;
+color:white;
+-webkit-transition: width  1s;
+-webkit-transition: height  1s;
+width:0px;
+height:0px;
+opacity:.2;
+}
+
+table.rubencorto:hover{
+    width:300px;
+    height:300px;
+    opacity:1;
+}
+
+img.oscurecer {
+  opacity: 1;
+  -webkit-transition: all .8s ease 0s;
+}
+img.oscurecer:hover {
+  opacity: 0.2;
+  background-color:black;
+}
