--- a/Stylesheet/astonmartin.css
+++ b/Stylesheet/astonmartin.css
@@ -15,10 +15,10 @@ div.contenedor{
     height:230px;
     float:left;
     }
-div#uno{background-color: rgb(288,101,3);}
-div#dos{background-color: rgb(233,147,26);}
-div#tres{background-color: rgb(22,145,190);}
-div#cuatro{background-color: rgb(22,107,162);}
+div#uno{background-image: url(../imagenes/fondohover.jpg);}
+div#dos{background-image: url(../imagenes/fondohover.jpg);}
+div#tres{background-image: url(../imagenes/fondohover.jpg);}
+div#cuatro{background-image: url(../imagenes/fondohover.jpg);}
 
 img.icon{display:block;
 margin:50px auto;
@@ -28,6 +28,10 @@ padding:20px;
 -webkit-border-radius:50px;
 -webkit-box-shadow:0px 0px 0px 30px rgba(255,255,255,0);
 -webkit-transition: box-shadow .4s;
+}
+
+a{
+  color:white;  
 }
 
 p.texto{
@@ -146,5 +150,5 @@ img.oscurecer {
 }
 img.oscurecer:hover {
   opacity: 0.2;
-  background-color:black;
+  backgroun-color:black;
 }
